Fix experiments spacing using margin-top on video-wrap

--- a/style.css
+++ b/style.css
@@ -178,8 +178,8 @@ a {
   margin-bottom: 7rem;
 }
 
-#experiments .project-info {
-  margin-bottom: 4rem;
+#experiments .video-wrap {
+  margin-top: 2rem;
 }
 
 .project-info {
